카테고리 출력 레디스인메모리디비사용/ 수정/삭제/추가시 인메모리 디비 초기화기능 구현/